# prediction-markets

./: .gitignore  README.md  cloudbuild.yaml  pyproject.toml
.claude/: settings.local.json
config/: markets.example.yaml
scripts/: deploy-vm.ps1  install-on-vm.sh  provision-gcp-debater.ps1  provision-gcp.ps1  register-discord-commands.ps1  vm-startup.sh
sql/: alerts_table.sql  debates_table.sql  detect_anomalies.sql  kalshi_series_table.sql  markets_staging_table.sql  markets_table.sql  polymarket_markets_staging_table.sql  polymarket_markets_table.sql  trades_table.sql
src/prediction_markets/debater/: Dockerfile  __main__.py  bq_writer.py  budget.py  cache.py  debate.py  moderator.py  server.py  transcript.py  verdict_post.py
src/prediction_markets/debater/providers/: anthropic_agent.py  base.py  gemini_agent.py  grok_agent.py  openai_agent.py  pricing.py
src/prediction_markets/discord_bot/: Dockerfile  __main__.py  handlers.py  server.py  signing.py
src/prediction_markets/kalshi/: __main__.py  auth.py  resolver.py  rest.py  websocket.py
src/prediction_markets/notifier/: __main__.py  discord.py
src/prediction_markets/polymarket/: __main__.py  gamma.py  resolver.py  websocket.py
src/prediction_markets/shared/: bq.py  config.py  log.py  secrets.py  subscriptions.py
systemd/: kalshi-collector.service  kalshi-resolver.service  kalshi-resolver.timer  notifier.service  notifier.timer  polymarket-collector.service  polymarket-resolver.service  polymarket-resolver.timer
